Copied Code from branch refractoring

--- a/DotsMatrixDisplay/index.html
+++ b/DotsMatrixDisplay/index.html
@@ -12,6 +12,9 @@
     <!-- ... and finally the main sketch file. -->
     <script src="Constants.js"></script>
     <script src="Layouter.js"></script>
+    <script src="TextDrawer.js"></script>
+    <script src="SymbolDrawer.js"></script>
+
     <script src="sketch.js"></script>
 </head>
 <body>
