Added DataHandler to make the code more agile and easier to extend

--- a/DotsMatrixDisplay/index.html
+++ b/DotsMatrixDisplay/index.html
@@ -14,6 +14,7 @@
     <script src="Layouter.js"></script>
     <script src="TextDrawer.js"></script>
     <script src="SymbolDrawer.js"></script>
+    <script src="DataHandler.js"></script>
 
     <script src="sketch.js"></script>
 </head>
