Startet with the display representation in bits

--- a/DotsMatrixDisplay/index.html
+++ b/DotsMatrixDisplay/index.html
@@ -15,8 +15,7 @@
     <script src="TextDrawer.js"></script>
     <script src="SymbolDrawer.js"></script>
     <script src="DataHandler.js"></script>
-
-    <script src="sketch.js"></script>
+    <script src="TestNewLEDMethod.js"></script>
 </head>
 <body>
 </body>
