--- a/DotsMatrixDisplay/index.html
+++ b/DotsMatrixDisplay/index.html
@@ -11,11 +11,9 @@
     <!-- then load sketch parts ...  -->
     <!-- ... and finally the main sketch file. -->
     <script src="Constants.js"></script>
-    <script src="Layouter.js"></script>
-    <script src="TextDrawer.js"></script>
-    <script src="SymbolDrawer.js"></script>
     <script src="DataHandler.js"></script>
-    <script src="TestNewLEDMethod.js"></script>
+    <script src="DisplayBuilder.js"></script>
+    <script src="DisplayDrawer.js"></script>
 </head>
 <body>
 </body>
