--- a/DotsMatrixDisplay/index.html
+++ b/DotsMatrixDisplay/index.html
@@ -13,7 +13,7 @@
     <script src="Constants.js"></script>
     <script src="DataHandler.js"></script>
     <script src="DisplayBuilder.js"></script>
-    <script src="DisplayDrawer.js"></script>
+    <script src="sketch.js"></script>
 </head>
 <body>
 </body>
