Made it more adaptive.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Project Explore - CoCo Dashboard Code Starter</title>
     <!-- Load p5 and addons first, ...  -->
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/addons/p5.sound.min.js"></script>
     <link href="https://unpkg.com/@csstools/normalize.css@12.1.1/normalize.css" rel="stylesheet" />
     <link rel="stylesheet" href="screen.css">
     <!-- then load sketch parts ...  -->
-    <script src="sketch_covid.js"></script>
-    <script src="sketch_peanuts.js"></script>
     <!-- ... and finally the main sketch file. -->
+    <script src="Scripts/DotsDisplay/Constants.js"></script>
+    <script src="Scripts/DotsDisplay/DataHandler.js"></script>
+    <script src="Scripts/DotsDisplay/DisplayBuilder.js"></script>
     <script src="sketch.js"></script>
 </head>
 <body>
