--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="Scripts/DotsDisplay/Constants.js"></script>
     <script src="Scripts/DotsDisplay/DataHandler.js"></script>
     <script src="Scripts/DotsDisplay/DisplayBuilder.js"></script>
+    <script src="Scripts/Data/CleaningLoader.js"></script>
     <script src="sketch.js"></script>
 </head>
 <body>
