Working on the display perfomance and created a funny effect

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script src="Scripts/DotsDisplay/DataHandler.js"></script>
     <script src="Scripts/DotsDisplay/DisplayBuilder.js"></script>
     <script src="Scripts/Data/CleaningLoader.js"></script>
+    <script src="Scripts/DotsDisplay/TextBox.js"></script>
     <script src="sketch.js"></script>
 </head>
 <body>
