--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="Scripts/DotsDisplay/DisplayBuilder.js"></script>
     <script src="Scripts/Data/CleaningLoader.js"></script>
     <script src="Scripts/Data/loadCoffee.js"></script>
+    <script src="Scripts/Data/CalendarLoader.js"></script>
+    <script src="https://unpkg.com/ical.js"></script>
     <script src="Scripts/DotsDisplay/TextBox.js"></script>
     <script src="sketch.js"></script>
 </head>
