Added information to the html page so the user knows that he has to be connected to the servers and has to switch displays by pressing x.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
     <link href="https://unpkg.com/@csstools/normalize.css@12.1.1/normalize.css" rel="stylesheet" />
     <link rel="stylesheet" href="screen.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- then load sketch parts ...  -->
     <!-- ... and finally the main sketch file. -->
     <script src="Scripts/DotsDisplay/Constants.js"></script>
@@ -21,5 +22,7 @@
     <script src="sketch.js"></script>
 </head>
 <body>
+<div id="main"></div> <!-- Container für den Sketch -->
+<p>Press x on your keyboard to switch the view. You must be connected to the TH-Köln servers via VPN or WLAN.</p>
 </body>
 </html>
