--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="Scripts/Data/CleaningLoader.js"></script>
     <script src="Scripts/Data/loadCoffee.js"></script>
     <script src="Scripts/Data/CalendarLoader.js"></script>
-    <script src="https://unpkg.com/ical.js"></script>
+    <script src="https://unpkg.com/ical.js@1"></script>
     <script src="Scripts/DotsDisplay/TextBox.js"></script>
     <script src="sketch.js"></script>
 </head>
